[tool.poetry]
name = "repl_python3_beta_ValorantStoreChecker-discord-bot-1"
version = "0.1.0"
description = ""
authors = ["Razan2 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
Flask = "^2.0.3"
Pillow = "^9.0.1"
requests = "^2.27.1"
discord-command = "^0.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
